force-app/main/default/objects/Discussion_Board__c/Discussion_Board__c.object-meta.xml
<CustomObject>
    <label>Discussion Board</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Discussion Board Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discussion Boards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>