force-app/main/default/objects/Discussion_Board__c/fields/Discussion_Intro__c.field-meta.xml
<CustomField>
    <fullName>Discussion_Intro__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Discussion Intro</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>