force-app/main/default/objects/Discussion_Board__c/fields/Full_Content__c.field-meta.xml
<CustomField>
    <fullName>Full_Content__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Full Content</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>