force-app/main/default/objects/Discussion_Board__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>DN-CA</fullName>
            </value>
            <value>
                <fullName>DN-US</fullName>
            </value>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>JPN</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>